feat: cellbase help tooltip

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -265,7 +265,8 @@
       "secondary": "Secondary",
       "commit": "Commit",
       "proposal": "Proposal",
-      "cellbase_help_tooltip": "The cellbase transaction of block N is sent to the miner of block N-11 as reward, learn more from our Consensus Protocol",
+      "cellbase_help_tooltip": "The cellbase transaction of block N is sent to the miner of block N-11 as reward, learn more from our {{consensus}}",
+      "consensus_protocol": "Consensus Protocol",
       "capacity_amount": "Capacity/Amount",
       "capacity": "Capacity",
       "reward_info": "Reward Info",
