--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -264,7 +264,8 @@
       "secondary": "二级",
       "commit": "提交",
       "proposal": "提案",
-      "cellbase_help_tooltip": "区块 N 的 Cellbase 交易将作为奖励发送给区块 N-11 的出块矿工，阅读共识协议了解更多信息",
+      "cellbase_help_tooltip": "区块 N 的 Cellbase 交易将作为奖励发送给区块 N-11 的出块矿工，阅读{{consensus}}了解更多信息",
+      "consensus_protocol": "共识协议",
       "capacity": "Capacity",
       "capacity_amount": "Capacity/Amount",
       "reward_info": "区块奖励",
