--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -470,8 +470,24 @@
         "rfc": "RFC",
         "code": "Source Code",
         "deprecated": "Deprecated",
-        "website": "Website"
+        "website": "Website",
+        "detail": "Detail"
       }
+    },
+    "scripts": {
+      "script": "Script",
+      "unnamed_script": "Untitled Script",
+      "script_name": "Script Name",
+      "script_type": "Script Type",
+      "hash_type": "Hash Type",
+      "code_hash": "Code Hash",
+      "type_id": "Type Id",
+      "index": "Index",
+      "cell_info": "Cell Info",
+      "deployed_cells": "Deployed Cells",
+      "referring_cells": "Referring Cells",
+      "capacity_of_deployed_cells": "Capacity of deployed cells",
+      "capacity_of_referring_cells": "Capacity of referring cells"
     },
     "fee_rate_tracker": {
       "title": "Fee Rate Tracker",
