--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -487,7 +487,9 @@
       "deployed_cells": "部署的 Cells",
       "referring_cells": "引用的 Cells",
       "capacity_of_deployed_cells": "部署的 Cells 所占 Capacity",
-      "capacity_of_referring_cells": "引用的 Cells 所占 Capacity"
+      "capacity_of_referring_cells": "引用的 Cells 所占 Capacity",
+      "LockScript": "Lock Script",
+      "TypeScript": "Type Script"
     },
     "fee_rate_tracker": {
       "title": "费率追踪",
