--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -502,12 +502,12 @@
       "second": "秒",
       "date": "日期",
       "average_fee_rate": "平均费率",
-      "confirmation_time_x_fee_rate": "确认时间与平均费率",
+      "confirmation_time_x_avg_fee_rate": "确认时间与平均费率",
       "last_n_transactions": "最近{{c}}笔交易",
       "fee_rate": "费率",
       "back": "返回",
       "confirmation_time": "确认时间",
-      "fee_rate_of_pending_transactions": "未确认交易的费率",
+      "fee_rate_of_pending_transactions": "Pending 交易的费率",
       "transaction_count": "交易数量",
       "n_days_historical_fee_rate": " 平均费率 (最近 {{n}} 天)",
       "count": "数量"
